Implement functions for getting competitors and number of attempts for each event

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<script src="js/jspdf.min.js"></script>
 		<script src="js/csvToArray.v2.1.min.js"></script>
 		<script src="js/xlsx.core.min.js"></script>
+		<script src="js/underscore.js"></script>
 		<script src="js/main.js"></script>
 	</body>
 </html>
