--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 		<p><input type="file" name="xlfile" id="xlf"></p>
 		<pre id="out"></pre>
 		<br>
+		<script src="js/jquery-1.11.3.min.js"></script>
 		<script src="js/jspdf.min.js"></script>
+		<script src="js/jspdf.debug.js"></script>
+		<script src="js/jspdf.plugin.autotable.js"></script>
 		<script src="js/csvToArray.v2.1.min.js"></script>
 		<script src="js/xlsx.core.min.js"></script>
 		<script src="js/underscore.js"></script>
