Support for different number of attempts

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 		<meta charset = "UTF-8">
 		<title>Score sheet generator</title>
 		<style>
+			canvas {
+				display: hidden
+			}
 		</style>
 	</head>
 	<body>
@@ -16,7 +19,6 @@
 		<script src="js/jspdf.min.js"></script>
 		<script src="js/jspdf.debug.js"></script>
 		<script src="js/jspdf.plugin.autotable.js"></script>
-		<script src="js/jspdf.plugin.addhtml.js"></script>
 		<script src="js/csvToArray.v2.1.min.js"></script>
 		<script src="js/xlsx.core.min.js"></script>
 		<script src="js/underscore.js"></script>
