Separate the process of uploading xlsx and generating pdf

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<p><input type="file" name="xlfile" id="xlf"></p>
-		<pre id="out"></pre>
+		<button id='generate' onclick="generate()"> Generate </button>
 		<br>
 		<canvas id="myCanvas" width="1000" height="500" style = "display : none" ></canvas>
 		<script src="js/jquery-1.11.3.min.js"></script>
