Extract functionalities related to reading of xlsx into array

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		<script src="js/csvToArray.v2.1.min.js"></script>
 		<script src="js/xlsx.core.min.js"></script>
 		<script src="js/underscore.js"></script>
+		<script src="js/xlsxInput.js"></script>
 		<script src="js/pdfOutput.js"></script>
 		<script src="js/main.js"></script>
 	</body>
