--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 		<button id='generate' onclick="generate()"> Generate </button>
 		<br>
 		<canvas id="myCanvas" width="1000" height="500" style = "display : none" ></canvas>
-		<script src="js/jquery-1.11.3.min.js"></script>
-		<script src="js/html2canvas.min.js"></script>
-		<script src="js/jspdf.min.js"></script>
-		<script src="js/jspdf.debug.js"></script>
-		<script src="js/jspdf.plugin.autotable.js"></script>
-		<script src="js/csvToArray.v2.1.min.js"></script>
-		<script src="js/xlsx.core.min.js"></script>
-		<script src="js/underscore.js"></script>
+		<script src="js/libraries/jquery-1.11.3.min.js"></script>
+		<script src="js/libraries/html2canvas.min.js"></script>
+		<script src="js/libraries/jspdf.min.js"></script>
+		<script src="js/libraries/jspdf.debug.js"></script>
+		<script src="js/libraries/jspdf.plugin.autotable.js"></script>
+		<script src="js/libraries/csvToArray.v2.1.min.js"></script>
+		<script src="js/libraries/xlsx.core.min.js"></script>
+		<script src="js/libraries/underscore.js"></script>
 		<script src="js/xlsxInput.js"></script>
 		<script src="js/pdfOutput.js"></script>
 		<script src="js/main.js"></script>
