--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset = "UTF-8">
-		<link rel="shortcut icon" type="image/png" href="favicon.svg"/>
+		<link rel="shortcut icon" type="image/svg" href="favicon.svg"/>
 		<title>Score sheet generator</title>
 	</head>
 	<body>
