--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset = "UTF-8">
-		<link rel="icon" type="image/png" href="favicon.png">
+		<link rel="icon" type="image/ico" href="zycuber.ico">
 		<title>Score sheet generator</title>
 	</head>
 	<body>
