--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<script src="js/libraries/xlsx.core.min.js"></script>
 		<script src="js/libraries/underscore.js"></script>
 		<script src="js/xlsxInput.js"></script>
-		<script src="js/pdfOutput.js"></script>
+		<script src="js/PDFGenerator.js"></script>
 		<script src="js/main.js"></script>
 	</body>
 </html>
