--- a/index.html
+++ b/index.html
@@ -3,13 +3,22 @@
 	<head>
 		<meta charset = "UTF-8">
 		<link rel="shortcut icon" type="image/ico" href="zycuber.ico"/>
+		<link rel='stylesheet' href='bootstrap/bootstrap.min.css'>
+		<link rel='stylesheet' href='bootstrap/bootstrap-theme.min.css'>
 		<title>Score sheet generator</title>
+
 	</head>
 	<body>
-		<p><input type="file" name="xlfile" id="xlf"></p>
-		<button id='generate' onclick="generate()"> Generate </button>
-		<br>
+		<div class='row'><div class='col-sm-6'>
+
+			<p><input type="file" class="filestyle" name="xlfile" data-size="sm" id="xlf"></p>
+			<p>
+			<button type="button" class="btn btn-default" id='generate' onclick="generate()"> Generate </button>
+			</p>
+		</div></div>
 		<script src="js/libraries/jquery-1.11.3.min.js"></script>
+		<script src="bootstrap/bootstrap.min.js"></script>
+		<script src="bootstrap/bootstrap-filestyle.min.js"></script>
 		<script src="js/libraries/html2canvas.min.js"></script>
 		<script src="js/libraries/jspdf.min.js"></script>
 		<script src="js/libraries/jspdf.debug.js"></script>
