--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 			<p><input type="file" class="filestyle" name="xlfile" data-size="sm" id="xlf"></p>
 			<p>
-			<button type="button" class="btn btn-default" id='generate' onclick="generate()"> Generate </button>
+			<button type="button" class="btn btn-default" id='generate'> Generate </button>
 			</p>
 		</div></div>
 		<script src="js/libraries/jquery-1.11.3.min.js"></script>
@@ -27,6 +27,7 @@
 		<script src="js/libraries/xlsx.core.min.js"></script>
 		<script src="js/libraries/underscore.js"></script>
 		<script src="js/xlsxInput.js"></script>
+		<script src="js/eventNames.js"></script>
 		<script src="js/PDFGenerator.js"></script>
 		<script src="js/main.js"></script>
 	</body>
