--- a/index.html
+++ b/index.html
@@ -9,12 +9,19 @@
 
 	</head>
 	<body>
-		<div class='row'><div class='col-sm-6'>
-
+			<div class='row'><div class='col-sm-5 col-xs-10'>
 			<p><input type="file" class="filestyle" name="xlfile" data-size="sm" id="xlf"></p>
 			<p>
-			<button type="button" class="btn btn-default" id='generate'> Generate </button>
+					<form class="input-group" id="grouping">
+						<label class="radio-inline">
+							<input type="radio" name="grouping" value="groupByPlayer" checked> Group by Players
+						</label>
+						<label class="radio-inline">
+							<input type="radio" name="grouping" value="groupByEvent"> Group by Events
+						</label>
+					</form>
 			</p>
+				<button type="button" class="btn btn-default" id='generate'> Generate </button>
 		</div></div>
 		<script src="js/libraries/jquery-1.11.3.min.js"></script>
 		<script src="bootstrap/bootstrap.min.js"></script>
