Setup for generating empty scoresheets

--- a/index.html
+++ b/index.html
@@ -27,6 +27,32 @@
 				</p>
 				<button type="button" class="btn btn-default" id='generate'> Generate </button>
 			</div></div>
+			<hr>
+			<div>
+				<p>Generate Empty Scoresheets</p>
+				<div class='row'>
+					<div class='col-sm-4 col-xs-12'>
+						<select class="form-control" id='selectEvent'></select>
+					</div>
+					<div class='col-sm-4 col-xs-12'>
+						<select class="form-control" id='selectRound'></select>
+					</div>
+					<div class='col-sm-4 col-xs-12'>
+						<select class="form-control" id='selectAttempts'></select>
+					</div>
+				</div>
+				<br>
+				<div class='row'>
+					<div class='col-sm-8 col-xs-12'>
+						<input type="text" class="form-control" placeholder="Competition Name" id='compName'>
+					</div>
+					<div class='col-sm-4 col-xs-12'>
+						<input type="text" class="form-control" placeholder="Number of copies" id='copies'>
+					</div>
+				</div>
+				<br>
+				<button type="button" class="btn btn-default" id='generateEmpty'> Generate Empty Scoresheets</button>
+			</div>
 		</div>
 		<script src="js/libraries/jquery-1.11.3.min.js"></script>
 		<script src="bootstrap/bootstrap.min.js"></script>
