Complete functions for generating empty scoresheets for any event and round

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						</label>
 					</form>
 				</p>
-				<button type="button" class="btn btn-default" id='generate'> Generate </button>
+				<button type="button" class="btn btn-default" id='generate'> Generate First Rounds' Scoresheet </button>
 			</div></div>
 			<hr>
 			<div>
