Improve the default options

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 		<script src="js/libraries/underscore.js"></script>
 		<script src="js/xlsxInput.js"></script>
 		<script src="js/eventNames.js"></script>
+		<script src="js/eventDefaults.js"></script>
 		<script src="js/PDFGenerator.js"></script>
 		<script src="js/main.js"></script>
 	</body>
