Modify the titles and headings

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 	<body>
 		<div class="container">
 			<div class="blog-header" id="title">
-				<h1 class = "blog-title"> Scoresheet generator</h1>
+				<h1 class = "blog-title"> WCA Competition Scoresheet Generator</h1>
 			</div>
 			<div class='row'><div class='col-sm-5 col-xs-10'>
-				<p><input type="file" class="filestyle" name="xlfile" data-size="sm" id="xlf"></p>
+				<h3>Generate First Rounds Scoresheet</h3>
+				<p>Upload the complete registration xlsx file here:<input type="file" class="filestyle" name="xlfile" data-size="sm" id="xlf"></p>
 				<p>
 					<form class="input-group" id="grouping">
 						<label class="radio-inline">
@@ -25,11 +26,11 @@
 						</label>
 					</form>
 				</p>
-				<button type="button" class="btn btn-default" id='generate'> Generate First Rounds' Scoresheet </button>
+				<button type="button" class="btn btn-default" id='generate'> Generate</button>
 			</div></div>
 			<hr>
 			<div>
-				<p>Generate Empty Scoresheets</p>
+				<h3>Generate Empty Scoresheets</h3>
 				<div class='row'>
 					<div class='col-sm-4 col-xs-12'>
 						<select class="form-control" id='selectEvent'></select>
