Minor modifications on styling and text

--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 			<div class="blog-header" id="title">
 				<h1 class = "blog-title"> WCA Competition Scoresheet Generator</h1>
 			</div>
+			<h3>Generate First Rounds Scoresheet</h3>
+			<p>Upload the complete registration xlsx file below:</p>
 			<div class='row'><div class='col-sm-5 col-xs-10'>
-				<h3>Generate First Rounds Scoresheet</h3>
-				<p>Upload the complete registration xlsx file here:<input type="file" class="filestyle" name="xlfile" data-size="sm" id="xlf"></p>
+				<p><input type="file" class="filestyle" name="xlfile" data-size="sm" id="xlf"></p>
 				<p>
 					<form class="input-group" id="grouping">
 						<label class="radio-inline">
@@ -52,7 +53,7 @@
 					</div>
 				</div>
 				<br>
-				<button type="button" class="btn btn-default" id='generateEmpty'> Generate Empty Scoresheets</button>
+				<button type="button" class="btn btn-default" id='generateEmpty'>Generate</button>
 			</div>
 		</div>
 		<script src="js/libraries/jquery-1.11.3.min.js"></script>
