generate forms to select the number of attempts for each event

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<h1 class = "blog-title"> WCA Competition Scoresheet Generator</h1>
 			</div>
 			<h3>Generate First Rounds Scoresheet</h3>
-			<p>Upload the complete registration xlsx file below:</p>
+			<p>Upload the registration CSV file below:</p>
 			<div class='row'><div class='col-sm-5 col-xs-10'>
 				<!-- <p><input type="file" class="filestyle" name="xlfile" data-size="sm" id="xlf"></p> -->
 				<p><input type="file" class="filestyle" data-size="sm" id="csv"></p>
@@ -31,6 +31,8 @@
 				<!-- <button type="button" class="btn btn-default" id='generate'> Generate</button> -->
 				<button type="button" class="btn btn-default" id='generate'> Generate</button>
 			</div></div>
+			<div class='row' id='numberOfAttempts'></div>
+			<br>
 			<hr>
 			<div>
 				<h3>Generate Empty Scoresheets</h3>
