Rename to scoresheetGenerator

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 		<script src="js/libraries/underscore.js"></script>
 		<script src="js/eventNames.js"></script>
 		<script src="js/eventDefaults.js"></script>
-		<script src="js/PDFGenerator.js"></script>
+		<script src="js/scoresheetGenerator.js"></script>
 		<script src="js/main.js"></script>
 		<script src="js/process_csv.js"></script>
 	</body>
