add localhost for debugging

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<h1 class = "blog-title"> WCA Competition Scoresheet Generator</h1>
 			</div>
 			<a class="btn btn-success" id='wca' href="https://www.worldcubeassociation.org/oauth/authorize?client_id=b84924b3351804e16c2ec25f8d5db240c95af64275f5f5cb920e8354efa58e78&redirect_uri=https%3A%2F%2Fzhouyichen.github.io%2Fscoresheet%2F&response_type=token&scope=public+manage_competitions+dob+email">Log in with WCA</a>
-			
+			<!-- <a class="btn btn-success" id='wca' href="https://www.worldcubeassociation.org/oauth/authorize?client_id=b84924b3351804e16c2ec25f8d5db240c95af64275f5f5cb920e8354efa58e78&redirect_uri=http%3A%2F%2Flocalhost%3A8000%2F&response_type=token&scope=public+manage_competitions+dob+email">Log in with WCA</a> -->
 			<h3>Generate First Rounds Scoresheet</h3>
 			<p>Upload the registration CSV file below:</p>
 			<div class='row'><div class='col-sm-5 col-xs-10'>
