add round formats

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 		<script src="js/libraries/xlsx.core.min.js"></script>
 		<script src="js/libraries/underscore.js"></script>
 		<script src="js/eventNames.js"></script>
+		<script src="js/formats.js"></script>
 		<script src="js/eventDefaults.js"></script>
 		<script src="js/scoresheetGenerator_v2.js"></script>
 		<script src="js/main.js"></script>
