generate buttons in HTML

--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
 				</div></div>
 
 				<button type="button" class="btn btn-default" id='generateFirstRounds'> Generate First Rounds</button>
+				<div class='row'><div class='col-sm-12 col-xs-12'>
+					<p>Generate scoresheets for other rounds:</p>
+					<div id="otherRounds"></div>
+				</div></div>
 
 			</div>
 			<hr>
