implement downloading registration csv

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 				</div></div>
 
 				<button type="button" class="btn btn-default" id='generateFirstRounds'> Generate First Rounds</button>
+				<button type="button" class="btn btn-default" id='reg_csv'>Download Registration CSV</button>
 				
 				<br><br>
 				<div class='row'><div class='col-sm-12 col-xs-12'>
