--- a/index.html
+++ b/index.html
@@ -72,11 +72,18 @@
 				</div>
 				<br>
 				<div class='row'>
-					<div class='col-sm-8 col-xs-12'>
+					<div class='col-sm-5 col-xs-12'>
 						<input type="text" class="form-control" placeholder="Competition Name" id='compName'>
 					</div>
-					<div class='col-sm-4 col-xs-12'>
+					<div class='col-sm-2 col-xs-12'>
 						<input type="text" class="form-control" placeholder="Number of copies" id='copies'>
+					</div>
+					<div class='col-sm-2 col-xs-12'>
+						<input type="number" class="form-control" placeholder="Number of groups" id='groups' value="">
+					</div>
+					<div class='col-sm-3 col-xs-12'>
+						<input type="checkbox"  id='fillRank' class="form-control" name='fillRank' value="fillRank">
+						<label for="fillRank">Fill Rank</label>
 					</div>
 				</div>
 				<br>
